--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "release.config.cjs"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/halkeye/helm-semantic-release-config.git"
