fix: rename to index.cjs so semantic release doesn't try and use it

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "access": "public"
   },
   "description": "Config for helm releases",
-  "main": "release.config.cjs",
+  "main": "index.cjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
