--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "release": {
+    "branches": [
+      "main",
+      "alpha",
+      "beta"
+    ]
+  },
   "files": [
     "release.config.cjs"
   ],
